--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
         <h1 id="http4s-scala-xml-1" class="title">http4s-scala-xml-1</h1>
         
         <h3 id="usage" class="section">Usage<a class="anchor-link right" href="#usage"><i class="icofont-laika">&#xef71;</i></a></h3>
-        <p>This library is currently available for Scala binary versions 2.13 and 3.1.</p>
+        <p>This library is available for Scala binary versions 2.12 and 2.13.</p>
         <p>To use the latest version, include the following in your <code>build.sbt</code>:</p>
         <pre class="keep-together pdf epub"><code class="nohighlight"><span class="identifier">libraryDependencies</span><span> ++= </span><span class="type-name">Seq</span><span>(
-  </span><span class="string-literal">&quot;org.http4s&quot;</span><span> %% </span><span class="string-literal">&quot;http4s-scala-xml-1&quot;</span><span> % </span><span class="string-literal">&quot;0.0-eeec197-SNAPSHOT&quot;</span><span>
+  </span><span class="string-literal">&quot;org.http4s&quot;</span><span> %% </span><span class="string-literal">&quot;http4s-scala-xml-1&quot;</span><span> % </span><span class="string-literal">&quot;0.0-9c9612f-SNAPSHOT&quot;</span><span>
 )</span></code></pre>
 
         <hr style="margin-top: 30px"/>
