--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <p>This library is available for Scala binary versions 2.12 and 2.13.</p>
         <p>To use the latest version, include the following in your <code>build.sbt</code>:</p>
         <pre class="keep-together pdf epub"><code class="nohighlight"><span class="identifier">libraryDependencies</span><span> ++= </span><span class="type-name">Seq</span><span>(
-  </span><span class="string-literal">&quot;org.http4s&quot;</span><span> %% </span><span class="string-literal">&quot;http4s-scala-xml-1&quot;</span><span> % </span><span class="string-literal">&quot;0.0-9c9612f-SNAPSHOT&quot;</span><span>
+  </span><span class="string-literal">&quot;org.http4s&quot;</span><span> %% </span><span class="string-literal">&quot;http4s-scala-xml-1&quot;</span><span> % </span><span class="string-literal">&quot;0.23.0&quot;</span><span>
 )</span></code></pre>
 
         <hr style="margin-top: 30px"/>
